    de
  * Prise en chage du PROXY INIST (on et off) pour :
    - le système dans son ensemble
    - les consoles avec et sans login
    - apt
    - npm
    - firefox / iceweasel (seulement le premier profil)
    Pour l'instant, Chrome/Chromium n'est pas supporté.
  * Prise en charge du rechargement de la commande « inist »
  * [DEV] Ajout de la section « make » dans README.md
  * [DEV] Ajout de la gestion du sourçage de /opt/inist-tools/inistrc
    dans le .bashrc de l'utilisateur en postins/postrm
  * [DEV] Conserve le statut « inist proxy on » pour le répercuter sur
    l'ouverture d'une nouvelle console
  * [DEV] Lancement des TU à chaque 'git push'
  * [DEV] Correction du fichier .travis.yml
  * [DEV] Correction du fichier .travis.yml (2)
  * [DEV] Correction du fichier .travis.yml (3)
  * [DEV] TU pour les fonction backup/restore de fichiers
  * [DEV] Modification de /tools/prepare-deb.sh pour s'adapter au
    changement d'arbo
  * [DEV] Lien sybolique permettant à dpkg-deb d'utiliser
    /install/debian
  * [DEV] Commit -- 23/06/2016 @ 11:57:14
  * [DEV] Diverses corrections mineures
  * [DEV] Correction du bug bloquant d'installation sur les
    configuration qui n'utilisent pas /home/perrin
  * [DEV] Première version des commandes proxy on|off pour bower et
    docker
  * [DEV] Correction doc + correction proxy on pour APT + ajout messahe
    d'erreur sur commande incorrecte
  * [DEV] Màj des procédures docker-proxy-on et docker-proxy-off
  * [DEV] Màj des scripts on et off pour docker
  * [DEV] Ajout des fichiers pour proxypac
  * [DEV] Ajout des fichiers pour proxypac
  * [DEV] Commit -- 17/08/2016 @ 13:18:23
  * [DEV] wip refactoring
  * [DEV] update .gitignore
  * [DEV] Refactoring des fonctions proxy on / proxy off
  * [DEV] Commit -- 26/09/2016 @ 13:08:01
  * [DEV] Màj doc
  * [DEV] Modifications mineures

 -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200